--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css"/>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <img id="meme" alt="mememe"/>
-        <h2 id="txt">Shona</h2>
-        <button id="btn">Dabao na</button>
+        <img id="meme" alt="mememe" src="./images/defaultMeme_updated.png"/>
+        <h2 id="txt">Generating Meme.....</h2>
+        <button id="btn">Get a Meme</button>
     </div>
 
 </body>
